# melearner

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml  windows-msi.yml  windows-portable.yml
app/: globals.css  layout.tsx  page.tsx
components/: app-bootstrap.tsx  app-providers.tsx  app-sidebar.tsx  brand-logo.tsx  chart-area-interactive.tsx  content-viewer.tsx  course-artwork.tsx  course-card.tsx  course-grid.tsx  data-table.tsx  evlog-client-provider.tsx  home-screen.tsx  section-cards.tsx  theme-menu.tsx  theme-toggle.tsx  title-bar.tsx  video-player.tsx
components/course-viewer/: layout.tsx  notes-panel.tsx  sidebar.tsx  video-area.tsx
components/ui/: badge.tsx  button.tsx  chart.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input-group.tsx  input.tsx  progress.tsx  sidebar.tsx  sonner.tsx  tabs.tsx  toggle.tsx  tooltip.tsx
crates/melearner-core/: Cargo.toml  build.rs  cbindgen.toml
crates/melearner-core/src/: coordinator.rs  lib.rs  library.rs  migrations.rs  scanner.rs  schema.rs  schema.sql
crates/melearner-core/tests/: abi_domain.rs  abi_lifecycle.rs  abi_transport.rs  current_schema.rs  database_fixture.rs  header_drift.rs  migration_checksums.rs
docs/: development.md  install.md  privacy-and-legal.md  stats-and-identity-plan.md  usage.md
docs/adr/: 0001-local-first-native-desktop.md  0002-sqlite-is-the-durable-library-store.md  0003-local-files-load-through-tauri-assets.md  0003-non-playback-local-files-load-through-tauri-assets.md  0004-visual-system-is-restrained-editorial-product-ui.md  0005-curated-release-assets.md  0006-playback-fallback-remuxes-before-transcoding.md  0007-course-cards-do-not-generate-runtime-video-thumbnails.md  0008-durable-course-identity-uses-local-fingerprints.md  0009-remove-stale-and-redundant-artifacts.md  0010-embedded-libmpv-native-playback.md  0011-native-sdk-zig-shell-with-rust-static-core.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: native-sdk-overhaul.md  typescript-7-migration.md
docs/specs/: fully-native-melearner.md
fixtures/parity/: database-current.sql  database-v16.sql  database-v16.sqlite  oracle-v1.json  scanner-v1.json  watchdog-app.mjs
include/: melearner_core.h
lib/: app-bootstrap-boundary.test.mjs  course-artwork-boundary.test.mjs  course-identity.test.mjs  course-identity.ts  course-store-boundary.test.mjs  course-thumbnails.ts  course-utils.ts  dashboard-selectors.test.mjs  dashboard-selectors.ts  database-sqlite-fixture.test.mjs  database.ts  frontend-log.ts  native-player-boundary.test.mjs  native-player.ts  notes-store.ts  operations-boundary.test.mjs  operations.ts  packaging-boundary.test.mjs  parity-fixtures.test.mjs  search-index-boundary.test.mjs  search.ts  startup-route-boundary.test.mjs  stats.test.mjs  stats.ts  subtitles.ts  tauri.ts  thumbnail-asset-scope.test.mjs  utils.ts
lib/hooks/: use-async-resource.ts
lib/stores/: course-store.ts
lib/trpc/: router.ts
native-app/: app.zon  build.zig  build.zig.zon
native-app/assets/licenses/melearner/: LICENSE-MIT.txt
native-app/assets/licenses/melearner-ui/: NOTICE.txt  OFL-Geist.txt
native-app/src/: core_adapter.zig  library.native  main.zig  tests.zig
native-app/src/fonts/: README.md
packaging/arch/: .SRCINFO  PKGBUILD  io.github.whitehades.melearner.desktop  melearner.desktop
plans/: 001-durable-course-identity-groundwork.md  README.md
scripts/: install-arch-fast.sh  responsiveness-watchdog.mjs  responsiveness-watchdog.test.mjs  sign-windows-msi-test.ps1  sign-windows-msi.ps1  stage-windows-runtime-dlls.mjs  test-core-abi.sh  verify-installed-native-playback.sh  verify-native-playback.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  library_search.rs  main.rs  media.rs  migrations.rs  native_player.rs  scanner.rs
src-tauri/src/native_player/: surface.rs
src-tauri/src/native_player/surface/: linux_gtk.rs  macos_appkit.rs  windows_opengl.rs
tests/: core_abi_smoke.zig
types/: index.ts
