[package]
name = "melearner"
version = "0.1.0"
description = "modern local course viewer"
authors = ["WhiteHades"]
license = "MIT"
repository = "https://github.com/WhiteHades/melearner"
homepage = "https://github.com/WhiteHades/melearner"
edition = "2021"
rust-version = "1.77.2"
exclude = [".github", "out", "node_modules"]

[lib]
name = "melearner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "=2.8.0"
tauri-plugin-fs = { version = "=2.4.5", features = ["watch"] }
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-sql = { version = "=2.3.1", features = ["sqlite"] }
jwalk = "0.8"
rayon = "1.10"
dashmap = "6.1"
notify = "6.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
http-range = "0.1"
urlencoding = "2.1"
tower = { version = "0.5.3", features = ["util"] }
seahash = "4.1"
