[package]
name = "melearner"
version = "0.1.8"
description = "local-first course learner"
authors = ["WhiteHades"]
license = "MIT"
repository = "https://github.com/WhiteHades/melearner"
homepage = "https://github.com/WhiteHades/melearner"
edition = "2024"
rust-version = "1.96.0"
exclude = [".github", "out", "node_modules"]

[lib]
name = "melearner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.11.5", features = ["protocol-asset", "unstable"] }
tauri-plugin-log = "=2.8.0"
tauri-plugin-fs = { version = "=2.5.1", features = ["watch"] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-sql = { version = "=2.4.0", features = ["sqlite"] }
jwalk = "0.8"
dashmap = "6.1"
notify = "6.1"
tokio = { version = "1", features = ["rt", "macros"] }
seahash = "4.1"
libmpv2 = "6.0.0"
libmpv2-sys = "4.0.1"
raw-window-handle = "0.6"
fff-search = "0.9.7-nightly.fce72fa"
