[package]
name = "melearner-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
publish = false

[features]
default = []
abi-test-hooks = []

[lib]
name = "melearner_core"
crate-type = ["rlib", "staticlib"]

[dependencies]
icu_collator = "=2.2.1"
jwalk = "=0.8.1"
seahash = "=4.1.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "=1.52.3", features = ["rt"] }

[dev-dependencies]
cbindgen = "=0.29.4"
tempfile = "=3.27.0"
